# RecordDatabase

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
RecordDatabaseNative/: CMakeLists.txt  resources.qrc
RecordDatabaseNative/include/: dialogs.h  mainwindow.h  recordmanager.h  texteditor.h
RecordDatabaseNative/lib/: dialogs.cpp  mainwindow.cpp  recordmanager.cpp  texteditor.cpp
RecordDatabaseNative/src/: main.cpp
RecordDatabaseNative/test/: test_dialogs.cpp
RecordDatabaseNative/tests/: CMakeLists.txt
RecordDatabaseNative/translations/: en.ts  tr.ts
RecordDatabaseNative/translations/qm/: qtbase_tr.qm  tr.qm
RecordDatabasePython/: main.py
RecordDatabasePython/recorddatabase/: dialogs.py  mainwindow.py  recordmanager.py  recordmodel.py  texteditor.py
RecordDatabasePython/tests/: test_dialogs.py
RecordDatabasePython/translations/: en.ts  qtbase_tr.ts  tr.ts
RecordDatabasePython/translations/qm/: tr.qm
RecordDatabaseQuick/: CMakeLists.txt  qml.qrc  qtquickcontrols2.conf  resources.qrc
RecordDatabaseQuick/qml/: main.qml
RecordDatabaseQuick/qml/Dialogs/: AboutDialog.qml  ColorDialog.qml  ErrorDialog.qml  FontDialog.qml  NewRecordDialog.qml  OpenRecordDialog.qml
RecordDatabaseQuick/src/: documenthandler.cpp  documenthandler.h  language.cpp  language.h  main.cpp  recordmanager.cpp  recordmanager.h
RecordDatabaseQuick/test/: tst_dialogs.qml
RecordDatabaseQuick/tests/: CMakeLists.txt  test_dialogs.cpp
RecordDatabaseQuick/translations/: en.ts  tr.ts
RecordDatabaseQuick/translations/qm/: tr.qm
travis/linux/: build.sh
